--- a/spring-security/pom.xml
+++ b/spring-security/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.csfw.jexx</groupId>
-    <artifactId>spring-serurity</artifactId>
+    <artifactId>spring-security</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>spring-serurity</name>
     <description>Demo project for Spring Boot</description>
